# VDT_VDS_2026

./: .gitignore  README.md  checklist.md  pyproject.toml
docs/: business_understanding.md  data_understanding.md  feature_specification.md
notebooks/: EDA.ipynb  clustering.ipynb  dts_unsup.ipynb  supervised.ipynb  unsupervised.ipynb
outputs/: anomaly_graph_score.csv  anomaly_scores.csv  customer_graph_edges_holdout.csv  customer_graph_edges_holdout_strong.csv  dts_unsup_with_pillars.csv  holdout_features.parquet  trackA_holdout_submission.csv
outputs/supervised/: decision_matrix.csv  decision_thresholds.json  fairness_segment_report.csv  feature_psi_report.csv  final_model_card.md  holdout_decision_actions.csv  holdout_features_supervised.parquet  holdout_submission_final.csv  score_psi_report.csv  supervised_calibration_reliability_curve.csv  supervised_feature_schema.csv  supervised_global_shap_importance.csv  supervised_local_shap_case_studies.csv  supervised_woe_mapping.csv  train_features_supervised.parquet  train_oof_scores.csv  train_segment_label_report.csv
outputs/unsup_submit/: manifest.json  tracka_blend_submission.csv  tracka_component_scores_holdout.csv  tracka_component_sim_swap_ato_metrics.csv  tracka_iso_submission.csv  tracka_lof_submission.csv  tracka_train_blend_weight_sweep.csv  tracka_train_component_sim_swap_ato_metrics.csv
scripts/: generate_report_figures.py  generate_train_oof_scores.py  tracka_component_analysis.py  week4_finalize.py
src/business/: __init__.py  decision_matrix.py
src/evaluation/: error_analysis.py  metrics.py  (+3 more)
(+23 files in other folders)
