[project]
name = "vdt-vds-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.12",
]
