[project]
name = "vdt-vds-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "mlflow>=1.27.0",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "protobuf<4",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "setuptools<81",
    "shap>=0.51.0",
    "tqdm>=4.68.2",
    "umap-learn>=0.5.12",
    "xgboost>=3.2.0",
]
